refactor: simplifying minmax model